@@ -10,6 +10,14 @@ query the CVS tree.  For example,
 will tell you what has been changed in the last week.
 
 
+3/3/99 Added a "disallownew" field to the products table.  If non-zero, then
+don't let people file new bugs against this product.  (This is for when a 
+product is retired, but you want to keep the bug reports around for posterity.)
+Feed this to MySQL:
+
+	alter table products add column disallownew tinyint not null;
+
+
 2/8/99 Added FreeBSD to the list of OS's.  Feed this to MySQL:
 
 	alter table bugs change column op_sys op_sys enum("All", "Windows 3.1", "Windows 95", "Windows 98", "Windows NT", "Mac System 7", "Mac System 7.5", "Mac System 7.6.1", "Mac System 8.0", "Mac System 8.5", "AIX", "BSDI", "HP-UX", "IRIX", "Linux", "FreeBSD", "OSF/1", "Solaris", "SunOS", "OS/2", "other") not null;
